[Qt] New fast/text/word-space-with-kerning-3.html fails on Qt. https://bugs.webkit.org/show_bug.cgi?id=112668

Reviewed by Jocelyn Turcotte.

Source/WebCore:

Qt adds word-spacing to leading spaces, but WebCore only expects
us to add for trailing spaces. We only corrected for this in width
calculation but do need to also do it for drawing.

Instead of subtracting the extra word-spacing we now configure the
FormatRange not to apply to leading spaces. This means this behavior
will be applied everywhere reliably.

* platform/graphics/Font.h:
(Font):
* platform/graphics/qt/FontQt.cpp:
(WebCore::Font::drawComplexText):
(WebCore::Font::floatWidthForComplexText):
(WebCore::Font::offsetForPositionForComplexText):
(WebCore::Font::selectionRectForComplexText):
(WebCore::Font::initFormatForTextLayout):

LayoutTests:

* platform/qt/TestExpectations:

Canonical link: https://commits.webkit.org/131406@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@146630 268f45cc-cd09-0410-ab3c-d52691b4dbfc